@@ -955,7 +955,7 @@ OpenDoc_ERROR_IN_FILE=Error in file
 OpenXML_FILTER_NAME=Microsoft Open XML Files
 OpenXML_FILTER_OPTIONS=Open XML Filter Options
 OpenXML_WORD=Word
-OpenXML_TRANSLATE_HIDDEN_TEXT=Non-visible Instruction &Text
+OpenXML_TRANSLATE_HIDDEN_TEXT=Non-visible Instruction Te&xt
 OpenXML_TRANSLATE_COMMENTS=Co&mments
 OpenXML_TRANSLATE_FOOTNOTES=&Footnotes
 OpenXML_TRANSLATE_ENDNOTES=&Endnotes
@@ -972,6 +972,7 @@ OpenXML_GLOBAL=Global
 OpenXML_TRANSLATE_CHARTS=C&harts
 OpenXML_TRANSLATE_DIAGRAMS=D&iagrams
 OpenXML_TRANSLATE_DRAWINGS=Dra&wings
+OpenXML_TRANSLATE_WORDART=WordAr&t
 OpenXML_GENERIC_OPTIONS=Other Options:
 OpenXML_AGGREGATE_TAGS=A&ggregate Tags
 OpenXML_PRESERVE_SPACES=&Preserve spaces for all tags
@@ -1442,3 +1443,4 @@ LT_OPTIONS_MENU_ENABLED=Language Checker
 
 # org.omegat.gui.dialogs.TeamOptionsDialog
 PROXY_LOGIN_DIALOG=Proxy User and Password
+OpenXML_TRANSLATE_WORDART=WordAr&t
