@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.3.0
 ----------------------------------------------------------------------
-   6 Enhancements
+   7 Enhancements
    3 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
@@ -14,6 +14,9 @@
 
   - TransTips to consider letter case
   http://sourceforge.net/support/tracker.php?aid=3027339
+
+  - Ability to translate WordArt in MS Office files
+  http://sourceforge.net/support/tracker.php?aid=3311077
 
   Other enhancements:
 
